--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -1,11 +1,20 @@
 <div class="container-about-all">
-  <h3 class="title-section">MI HISTORIA</h3>
+  <div
+  data-aos="zoom-in"
+  
+  data-aos-offset="300"
+  data-aos-duration="1500"
+  >
+
+    <h3 class="title-section">MI HISTORIA</h3>
+  </div>
   <div class="row">
     <div class="col-xl-4 col-lg-6 col-md-6 align-self-end">
       <div
         class="container-about-text"
         data-aos="fade-right"
         data-aos-offset="300"
+        data-aos-duration="1500"
         data-aos-easing="ease-in-sine"
       >
         
@@ -25,6 +34,7 @@
         class="container-foto"
         data-aos="zoom-in"
         data-aos-offset="300"
+        data-aos-duration="1500"
         data-aos-easing="ease-in-sine"
       >
         <img
@@ -43,6 +53,7 @@
               class="container-detail"
               data-aos="fade-down"
               data-aos-offset="300"
+              data-aos-duration="1500"
               data-aos-easing="ease-in-sine"
             >
               <h1>Details</h1>
@@ -70,6 +81,7 @@
               class="container-anexo"
               data-aos="fade-up"
               data-aos-offset="300"
+              data-aos-duration="1500"
               data-aos-easing="ease-in-sine"
             >
               <h4>
