--- a/src/app/public/components/competences/competences.component.scss
+++ b/src/app/public/components/competences/competences.component.scss
@@ -1,5 +1,5 @@
 .container-competences-all{
-    margin: 124px 212px ;
+    margin: 90px 60px ;
 }
 .container-competences-all:hover{
     .title-section{
@@ -7,6 +7,10 @@
         // color: black;
     }
 }
+h3{
+    font-size: 50px;
+ 
+ }
 
 .container-competences-all .text{
     color: white;
