--- a/src/app/public/components/competences/competences.component.html
+++ b/src/app/public/components/competences/competences.component.html
@@ -2,7 +2,20 @@
   <div class="row">
     <div class="col-lg-12">
       <div class="text">
-        <h2 class="title-section">MIS HABILIDADES</h2>
+        <div
+        data-aos="fade-right"
+          data-aos-offset="300"
+          data-aos-duration="1500"
+          data-aos-easing="ease-in-sine"
+        >
+          <h3
+          class="title-section"
+          
+        >
+          MIS HABILIDADES
+        </h3>
+        </div>
+        
         <p>
           Como ingeniero de sistemas, poseo una sólida formación en desarrollo
           de software y una pasión constante por aprender y aplicar nuevas
