--- a/src/app/public/components/hability/hability.component.scss
+++ b/src/app/public/components/hability/hability.component.scss
@@ -6,7 +6,8 @@
 
 .container-hablility{
     // margin: 0 1%;
-    padding: 80px 13%;
+    position: relative;
+    padding: 80px 23%;
     // background: blue;
     // height: 1px;
 }
@@ -137,8 +138,8 @@ margin-top: -500px;
 
 .contentIcons .container-card{
     padding: 130px; 
-    // height: 1822px;
-    // background: red;
+    // // height: 1822px;
+    // // background: red;
 }
 
 .contentIcons .container-card .imgIconsText img {
