--- a/src/app/public/components/references/references.component.html
+++ b/src/app/public/components/references/references.component.html
@@ -1,80 +1,106 @@
-<div class="container-references-all" >
-  <h2>MIS REFERENCIAS</h2>
+<div class="container-references-all">
+  <div
+    data-aos="zoom-in"
+    data-aos-offset="300"
+    data-aos-duration="1500"
+    data-aos-easing="ease-in-sine"
+  >
+    <h3 class="title-section">MIS REFERENCIAS</h3>
+  </div>
   <div class="contaniner-carrusel">
     <div class="row">
       <div class="col-lg-12">
-        <div class="carrusel-item">
+        <div class="carrusel-item" id="div1">
           <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-4" >
+            <div class="col-lg-5 col-md-4 col-sm-4">
               <div class="carrusel-img">
-                <img src="assets/img/jonathan01.png" alt="">
+                <img src="assets/img/jonathan01.png" alt="" />
               </div>
             </div>
             <div class="col-lg-7 col-md-8 col-sm-8">
               <div class="carrusel-detals">
-                <span>23 de marzo  del 2023</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis deleniti nihil ab aspernatur sapiente quos veritatis. Ipsam temporibus eaque in sunt tenetur quos expedita quasi mollitia, sequi maiores tempora!</p>
+                <span>24 de marzo del 2023</span>
+                <h2>Marco Perez</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                  officiis deleniti nihil ab aspernatur sapiente quos veritatis.
+                  Ipsam temporibus eaque in sunt tenetur quos expedita quasi
+                  mollitia, sequi maiores tempora!
+                </p>
               </div>
             </div>
           </div>
-          
         </div>
       </div>
       <div class="col-lg-12">
-        <div class="carrusel-item">
+        <div class="carrusel-item" id="div2">
           <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-4" >
+            <div class="col-lg-5 col-md-4 col-sm-4">
               <div class="carrusel-img">
-                <img src="assets/img/jonathan01.png" alt="">
+                <img src="assets/img/jonathan02.jpg" alt="" />
               </div>
             </div>
             <div class="col-lg-7 col-md-8 col-sm-8">
               <div class="carrusel-detals">
-                <span>23 de marzo  del 2023</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis deleniti nihil ab aspernatur sapiente quos veritatis. Ipsam temporibus eaque in sunt tenetur quos expedita quasi mollitia, sequi maiores tempora!</p>
+                <span>12 de abril del 2022</span>
+                <h2>Mateo Lopez</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                  officiis deleniti nihil ab aspernatur sapiente quos veritatis.
+                  Ipsam temporibus eaque in sunt tenetur quos expedita quasi
+                  mollitia, sequi maiores tempora!
+                </p>
               </div>
             </div>
           </div>
-          
         </div>
       </div>
       <div class="col-lg-12">
-        <div class="carrusel-item">
+        <div class="carrusel-item" id="div3">
           <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-4" >
+            <div class="col-lg-5 col-md-4 col-sm-4">
               <div class="carrusel-img">
-                <img src="assets/img/jonathan01.png" alt="">
+                <img src="assets/img/jonathan01.png" alt="" />
               </div>
             </div>
             <div class="col-lg-7 col-md-8 col-sm-8">
               <div class="carrusel-detals">
-                <span>23 de marzo  del 2023</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis deleniti nihil ab aspernatur sapiente quos veritatis. Ipsam temporibus eaque in sunt tenetur quos expedita quasi mollitia, sequi maiores tempora!</p>
+                <span>05 de febrero del 2020</span>
+                <h2>Cesar Mejia</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                  officiis deleniti nihil ab aspernatur sapiente quos veritatis.
+                  Ipsam temporibus eaque in sunt tenetur quos expedita quasi
+                  mollitia, sequi maiores tempora!
+                </p>
               </div>
             </div>
           </div>
-          
         </div>
       </div>
       <div class="col-lg-12">
-        <div class="carrusel-item">
+        <div class="carrusel-item" id="div4">
           <div class="row">
-            <div class="col-lg-5 col-md-4 col-sm-4" >
+            <div class="col-lg-5 col-md-4 col-sm-4">
               <div class="carrusel-img">
-                <img src="assets/img/jonathan01.png" alt="">
+                <img src="assets/img/jonathan01.png" alt="" />
               </div>
             </div>
             <div class="col-lg-7 col-md-8 col-sm-8">
               <div class="carrusel-detals">
-                <span>23 de marzo  del 2023</span>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe officiis deleniti nihil ab aspernatur sapiente quos veritatis. Ipsam temporibus eaque in sunt tenetur quos expedita quasi mollitia, sequi maiores tempora!</p>
+                <span>10 de octubre del 2021</span>
+                <h2>Freddy Orellana</h2>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
+                  officiis deleniti nihil ab aspernatur sapiente quos veritatis.
+                  Ipsam temporibus eaque in sunt tenetur quos expedita quasi
+                  mollitia, sequi maiores tempora!
+                </p>
               </div>
             </div>
           </div>
-          
         </div>
       </div>
-     
     </div>
   </div>
 </div>
