--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,3 +9,4 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 @import "~bootstrap/dist/css/bootstrap.min.css";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+// @import 'swiper/swiper-bundle.min.css';
