--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -18,7 +18,7 @@
         data-aos-easing="ease-in-sine"
       >
         
-          <h1>About!</h1>
+          <h1>Quién soy!</h1>
           <p>
             ¡Hola! Soy Jonnathan, un ingeniero de sistemas apasionado por la
             programación. Desde muy joven, me fascinó cómo la tecnología puede
@@ -56,7 +56,7 @@
               data-aos-duration="1500"
               data-aos-easing="ease-in-sine"
             >
-              <h1>Details</h1>
+              <h1>Información</h1>
               <div class="information">
                 <label for="" style="font-weight: 595">Nombre: </label>
                 <br /><span style="font-weight: 300">
