--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -404,6 +404,48 @@ margin: 20% 5%;
 
 }
 
+@media (max-width: 991px) {
+  .container-hability{
+    height: 110vh;
+  }
+}
+
+@media (max-width: 855px) {
+  .container-hability{
+    height: 122vh;
+  }
+}
+
+@media (max-width: 770px) {
+  .container-hability{
+    height: 162vh;
+  }
+}
+
+@media (max-width: 541px) {
+  .container-hability{
+    height: 215vh;
+  }
+}
+
+@media (max-width: 480px) {
+  .container-hability{
+    height: 180vh;
+  }
+}
+
+@media (max-width: 390px) {
+  .container-hability{
+    height: 200vh;
+  }
+}
+
+@media (max-width: 360px) {
+  .container-hability{
+    height: 205vh;
+  }
+}
+
 // .container-references{
 //   margin: 120px 0px; 
 // }
