--- a/src/app/public/components/hability/hability.component.scss
+++ b/src/app/public/components/hability/hability.component.scss
@@ -6,8 +6,9 @@
 
 .container-hablility{
     // margin: 0 1%;
+    // background: gold;
     position: relative;
-    padding: 80px 23%;
+    padding: 80px 250px;
     // background: blue;
     // height: 1px;
 }
@@ -43,7 +44,7 @@
     //  0 0 0 6px white;
     transform: rotate(calc(360deg/12 * var(--i)));
     transform-origin: 285px;
-    z-index: 100;
+    z-index: 10;
     overflow: hidden;
     animation: animte_01 95s linear infinite;
 }
@@ -73,14 +74,14 @@
     inset: 0;
     overflow: hidden;
     // height: 600px;
-    background: red;
+    // background: red;
 }
 .conte{
     // position: relative;
-  top: 0;
-  left: 0;
-z-index: 1;
-margin-top: -500px; 
+    // top: 0;
+    // left: 0;
+    // z-index: 1;
+    margin-top: -500px; 
 }
 
 .content::before{
@@ -151,3 +152,134 @@ margin-top: -500px;
     padding-top: 185px;
     text-align: center;
 }
+
+@media (max-width: 1600px) {
+   
+    .container-hablility{
+        padding: 80px 10%;
+        // width: 12px;
+    }
+    
+}
+
+@media (max-width: 1210px) {
+    .container-hablility{
+        padding: 180px 20%;
+        // width: 12px;
+    }
+    .hability .icons .imgIcons{
+        transform-origin: 230px;
+    }
+    .hability{
+        position: relative;
+        width: 400px;
+        height: 400px;
+        // border: 1px solid rgba(255, 255, 255, 0.062);
+        border-radius: 50%;
+    }
+    .contentIcons .container-card{
+        padding: 225px 120px; 
+        // // height: 1822px;
+        // // background: red;
+    }
+
+    .contentIcons .container-card .imgIconsText img {
+        width: 155px;
+    }
+}
+
+@media (max-width: 1110px) {
+    .container-hablility{
+        padding: 180px 10%;
+        // width: 12px;
+    }
+}
+
+@media (max-width: 991px) {
+    .container-hablility{
+        padding: 70px 30%;
+        // width: 12px;
+    }
+}
+@media (max-width: 821px) {
+    .container-hablility{
+        padding: 10px 30%;
+        // width: 12px;
+    }
+}
+
+@media (max-width: 740px) {
+    .container-hablility{
+        padding: 70px 25%;
+        // width: 12px;
+    }
+}
+
+@media (max-width: 605px) {
+    .container-hablility{
+        padding: 70px 18%;
+        // width: 12px;
+    }
+}
+
+@media (max-width: 540px) {
+    .container-hablility{
+        padding: 50px 21%;
+        // width: 12px;
+    }
+
+    .hability .icons .imgIcons{
+        transform-origin: 200px;
+    }
+
+    .content::before{
+        display: none;
+    }
+    
+    .contentIcons .container-card{
+        padding: 220px 90px; 
+        // // height: 1822px;
+        // background: red;
+        // width: 12px;
+    }
+    
+    .content::after{
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        left: 66px; 
+    }
+}
+
+@media (max-width: 450px) {
+    .container-hablility{
+        padding: 10px 14%;
+        // width: 12px;
+    }
+
+    .hability .icons .imgIcons{
+        transform-origin: 190px;
+    }
+    .content::after{
+        position: absolute;
+        width: 190px;
+        height: 190px;
+        top: 103px;
+        left: 56px; 
+    }
+
+    .contentIcons .container-card{
+        padding: 220px 73px; 
+        // // height: 1822px;
+        // background: red;
+        // width: 12px;
+    }
+
+    .contentIcons  .container-card .textIcons{
+        color: white;
+        padding-top: 145px;
+        padding-right: 80px;
+        text-align: center;
+    }
+}
+
