--- a/src/app/public/components/references/references.component.html
+++ b/src/app/public/components/references/references.component.html
@@ -5,7 +5,7 @@
     data-aos-duration="1500"
     data-aos-easing="ease-in-sine"
   >
-    <h3 class="title-section">MIS REFERENCIAS</h3>
+    <!-- <h3 class="title-section">MIS REFERENCIAS</h3> -->
   </div>
   <div class="contaniner-carrusel">
     <div class="row">
@@ -89,7 +89,7 @@
             <div class="col-lg-7 col-md-8 col-sm-8">
               <div class="carrusel-detals">
                 <span>10 de octubre del 2021</span>
-                <h2>Freddy Orellana</h2>
+                <h2>Freddy Orellana hola</h2>
                 <p>
                   Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe
                   officiis deleniti nihil ab aspernatur sapiente quos veritatis.
