--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -38,10 +38,9 @@
         data-aos-easing="ease-in-sine"
       >
         <img
-          src="/assets/img/jonathan02.jpg"
+          src="/assets/img/jonathan06.jpeg"
           alt=""
-          width="100%"
-          height="655px"
+          
         />
       </div>
     </div>
