--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -362,7 +362,7 @@
     <img
       #itemImg
       [@stateChange]="state"
-      src="assets/img/jonathan01.png"
+      src="assets/img/jonathan04.jpeg"
       alt=""
       class="brand-img"
     />
