--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="container-left">
-            <h4 class="header-subtitle">Hola, Yo soy</h4>
+            <h4 class="header-subtitle">Hola, Yo soy Jonnathan</h4>
             <h1 class="header-title">{{ profession }}</h1>
 
             <div class="content-slogan">
@@ -404,7 +404,7 @@
         <app-competences></app-competences>
       </div>
       <div class="col-lg-6">
-        <app-hability></app-hability>
+        <!-- <app-hability></app-hability> -->
       </div>
      </div>
       
