--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -452,15 +452,11 @@ margin: 20% 5%;
     }
   }
 
-// .container-references{
-//   margin: 120px 0px; 
-// }
+.container-references{
 
-// .container-contact{
-//   background-color: #29e78e;
-//   margin: 0;
-//   padding: 0;
-// }
+  margin-bottom: 95px;
+}
+
 
 @media (max-width: 1440px) {
   .container-About{
