--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -59,13 +59,13 @@
               <div class="information">
                 <label for="" style="font-weight: 595">Nombre: </label>
                 <br /><span style="font-weight: 300">
-                  Uzhca Fajardo Jonathan Chtitian</span
+                  Uzhca Fajardo Jonathan Christian</span
                 ><br />
                 <br />
                 <label for="" style="font-weight: 595">Edad:</label>
                 <br /><span style="font-weight: 300"> 29</span> <br />
                 <br />
-                <label for="" style="font-weight: 595">Genero: </label>
+                <label for="" style="font-weight: 595">Género: </label>
                 <br /><span style="font-weight: 300"> Masculino</span><br />
                 <br />
                 <label for="" style="font-weight: 595">Email: </label>
