--- a/src/app/public/components/references/references.component.scss
+++ b/src/app/public/components/references/references.component.scss
@@ -1,169 +1,365 @@
-*{
-   padding: 0;
-   margin: 0;
+.container:hover {
+  .title-section {
+    background-size: 41% 6px;
+    color: black;
+  }
+}
+
+h3 {
+  font-size: 50px;
+}
+
+.title-section {
+  background-image: linear-gradient(90deg, #3e92cc, #3e92cc, #3e92cc);
+  text-decoration: none;
+  text-align: center;
+  font-weight: bold;
+  cursor: pointer;
+  background-repeat: no-repeat;
+  background-size: 0% 2px;
+  background-position: center bottom;
+  transition: background-size 700ms ease-in-out;
+  margin: 44px;
+}
+
+img {
+  width: 100%;
+  transition: 0.5s;
+  border-radius: 50%;
+}
+
+img:hover {
+  box-shadow: 0 0 0 6px rgb(255, 255, 255), 0 0 0 12px #437497;
+}
+
+.timeline {
+  position: relative;
+  padding: 4px 0 0 0;
+  margin-top: 22px;
+  list-style: none;
+}
+
+.timeline > li:nth-child(even) {
+  position: relative;
+  margin-bottom: 50px;
+  height: 180px;
+  right: -100px;
+}
+
+.timeline > li:nth-child(odd) {
+  position: relative;
+  margin-bottom: 50px;
+  height: 180px;
+  left: -100px;
+}
+
+.timeline > li:before,
+.timeline > li:after {
+  content: " ";
+  display: table;
+}
+
+.timeline > li:after {
+  clear: both;
+  min-height: 170px;
+}
+
+.timeline > li .timeline-panel {
+  position: relative;
+  float: left;
+  width: 41%;
+  padding: 0 20px 20px 30px;
+  text-align: right;
+}
+
+.timeline > li .timeline-panel:before {
+  right: auto;
+  left: -15px;
+  border-right-width: 15px;
+  border-left-width: 0;
+}
+
+.timeline > li .timeline-panel:after {
+  right: auto;
+  left: -14px;
+  border-right-width: 14px;
+  border-left-width: 0;
+}
+
+.timeline > li .timeline-image {
+  z-index: 100;
+  position: absolute;
+  left: 50%;
+  border-radius: 100%;
+  background-color: #3b5998;
+  width: 200px;
+  height: 200px;
+  margin-left: -100px;
+}
+
+.timeline > li .timeline-image h4 {
+  margin-top: 12px;
+  font-size: 10px;
+  line-height: 14px;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel {
+  float: right;
+  padding: 0 30px 20px 20px;
+  text-align: left;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:before {
+  right: auto;
+  left: -15px;
+  border-right-width: 15px;
+  border-left-width: 0;
+}
+
+.timeline > li.timeline-inverted > .timeline-panel:after {
+  right: auto;
+  left: -14px;
+  border-right-width: 14px;
+  border-left-width: 0;
+}
+
+.timeline > li:last-child {
+  margin-bottom: 0;
+}
+
+.timeline .timeline-heading h4 {
+  margin-top: 22px;
+  margin-bottom: 4px;
+  padding: 0;
+  color: #b3b3b3;
+}
+
+.timeline .timeline-heading h4.subheading {
+  margin: 0;
+  padding: 0;
+  text-transform: none;
+  font-size: 18px;
+  color: #333333;
+}
+
+.timeline .timeline-body > p,
+.timeline .timeline-body > ul {
+  margin-bottom: 0;
+  color: #808080;
+}
+
+// /*Style for even div.line*/
+.timeline > li:nth-child(odd) .line:before {
+  content: "";
+  position: absolute;
+  top: 60px;
+  bottom: 0;
+  left: 740px;
+  width: 4px;
+  height: 280px;
+  background-color: rgb(38, 66, 95);
+  -ms-transform: rotate(-44deg); 
+  -webkit-transform: rotate(-44deg); 
+  transform: rotate(-44deg);
+  box-shadow: 0 0 5px #4582ec;
 }
 
 
-.container-references-all:hover{
-   .title-section{
-       background-size: 41% 6px;
-       color: black;
-   }
-
-}
-h3{
-   font-size: 50px;
-
-}
-
-.title-section{
-    
-   background-image: linear-gradient(90deg, #3E92CC, #3E92CC, #3E92CC);
-   text-decoration: none;
-   text-align: center;
-   font-weight: bold;
-   cursor: pointer;
-   background-repeat: no-repeat;
-   background-size: 0% 2px;
-   background-position: center bottom;
-   transition: background-size 700ms  ease-in-out;
-   margin: 44px;
+.timeline > li:nth-child(even) .line:before {
+  content: "";
+  position: absolute;
+  top: 60px;
+  bottom: 0;
+  left: 570px;
+  width: 4px;
+  height: 280px;
+  background-color: rgb(38, 66, 95);
+  -ms-transform: rotate(44deg); 
+  -webkit-transform: rotate(44deg); 
+  transform: rotate(44deg);
+  box-shadow: 0 0 5px #4582ec;
 }
 
-
-img{
-   width: 100%;
-   // height: 100%;
-//    background-position: center;
-//   background-size: cover;
-//   position: absolute;
-transition: 0.5s;
-    border-radius: 50%;
-   
+@media (min-width: 1199px) and (max-width: 1400px) {
+  .timeline > li:nth-child(odd) .line:before {
+    left: 630px;
+  }
+  .timeline > li:nth-child(even) .line:before {
+    left: 490px;
+  }
 }
 
-img:hover{
-   box-shadow: 0 0 0 6px rgb(255, 255, 255),
-    0 0 0 12px #2b8dd3 ;
-}
-
-.container-references-all{
-   // background: rebeccapurple;
-   margin: 12px 30% ;
-   height: 56vh;
-   // align-items: center;
-}
-
-@media (max-width: 1300px) {
-
-   .container-references-all{
-      // background: rebeccapurple;
-      margin: 12px 20% ;
-      // align-items: center;
-   }
-}
-
-@media (max-width: 993px) {
-   .container-references-all{
-      // background: rebeccapurple;
-      margin: 12px 10% ;
-      // align-items: center;
-   }
-}
-
-.carrusel-img{
-   margin: 10px;
-}
-
-.carrusel-detals{
-   // background: red;
-   position: relative;
-   margin: 50px 17px;
-   // height: 223px;
-}
-
-@media (max-width: 1100px) {
-
-   .carrusel-detals{
-      // background: red;
-      position: relative;
-      margin: 30px 0px;
-      // height: 223px;
-   }
-   
-}
-
-@media (max-width: 577px) {
-   .contaniner-carrusel{
-      // position: relative;      
-      // overflow: hidden;
-      height: 100vh;
-
-      // padding: 12px;
-      // margin: 23px;
-      }
-      .container-references-all{
-         // position: relative;      
-         // overflow: hidden;
-         height: 84vh;
-         // padding: 12px;
-         // margin: 23px;
-         }
-}
-.carrusel-detals span {
-   position: relative;
-   // margin: 13px 0;
-   font-size: 19px;
-   font-weight: 600;
-   color: rgba(0, 0, 0, 0.4);
-   // color: green;
-}
-.carrusel-detals p{
-   position: relative;
-   // margin: 10px 0;
-   text-align: justify;
-}
-
-.carrusel-detals h2{
-   position: relative;
-   padding: 14px 0;
-}
-
-.contaniner-carrusel{
-position: relative;
-
-overflow: hidden;
-height: 34vh;
-// padding: 12px;
-// margin: 23px;
-}
-
-.carrusel-item{
-   position: absolute;
-   width: 100%;
-   height: 34vh;
-   background-color: #fff;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   // font-size: 24px;
-   animation: transform 1s infinite;
-   transform: translateX(100%);
-   // opacity: 0;
-}
-
-// .card:nth-child(2) {
-   //    animation-delay: 2s;
-// }
-
-// .card:nth-child(3) {
-//    animation-delay: 4s;
-// }
-
-.carrusel-item.visible{
-   // transform: translateX(0);
-   transform: translateX(0);
-
+@media (min-width: 992px) and (max-width: 1199px) {
+  .timeline > li:nth-child(even) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    right: 0px;
+  }
+  .timeline > li:nth-child(odd) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    left: 0px;
+  }
+  .timeline > li:nth-child(even) .timeline-image {
+    left: 0;
+    margin-left: 0px;
+  }
+  .timeline > li:nth-child(odd) .timeline-image {
+    left: 690px;
+    margin-left: 0px;
+  }
+  .timeline > li:nth-child(even) .timeline-panel {
+    width: 76%;
+    padding: 0 0 20px 0px;
+    text-align: left;
+  }
+  .timeline > li:nth-child(odd) .timeline-panel {
+    width: 70%;
+    padding: 0 0 20px 0px;
+    text-align: right;
+  }
+  .timeline > li .line {
+    display: none;
+  }
 }
 
 
+@media (min-width: 768px) and (max-width: 991px) {
+  .timeline > li:nth-child(even) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    right: 0px;
+  }
+  .timeline > li:nth-child(odd) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    left: 0px;
+  }
+  .timeline > li:nth-child(even) .timeline-image {
+    left: 0;
+    margin-left: 0px;
+  }
+  .timeline > li:nth-child(odd) .timeline-image {
+    left: 520px;
+    margin-left: 0px;
+  }
+  .timeline > li:nth-child(even) .timeline-panel {
+    width: 70%;
+    padding: 0 0 40px 0px;
+    text-align: left;
+  }
+  .timeline > li:nth-child(odd) .timeline-panel {
+    width: 70%;
+    padding: 0 0 20px 0px;
+    text-align: right;
+  }
+  .timeline > li .line {
+    display: none;
+  }
+}
+
+@media (min-width: 544px) and (max-width: 767px) {
+
+  h3 {
+    font-size: 30px;
+  }
+
+  .timeline > li .line {
+    display: none;
+  }
+
+  .timeline > li .timeline-panel {
+    position: relative;
+    float: right;
+    width: 41%;
+    padding: 0 20px 20px 30px;
+    text-align: left;
+  }
+
+  .timeline > li:nth-child(even) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    right: 0px;
+  }
+  .timeline > li:nth-child(odd) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    left: 0px;
+  }
+
+  .timeline > li .timeline-image {
+    display: none;
+  }
+
+  .timeline > li:nth-child(even) .timeline-image {
+    left: 0;
+    margin-left: 0;
+  }
+  .timeline > li:nth-child(odd) .timeline-image {
+    left: 0px;
+    margin-left: 0;
+  }
+  .timeline > li:nth-child(even) .timeline-panel {
+    width: 100%;
+    padding: 0 0 20px 0px;
+  }
+  .timeline > li:nth-child(odd) .timeline-panel {
+    width: 100%;
+    padding: 0 0px 20px 0px;
+  }
+
+  p {
+    text-align: justify;
+  }
+}
+
+@media (min-width: 321px) and (max-width: 767px) {
+  h3 {
+    font-size: 36px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  h3 {
+    font-size: 40px;
+  }
+
+  p {
+    text-align: justify;
+  }
+
+  .timeline > li:nth-child(even) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    right: 0px;
+  }
+  .timeline > li:nth-child(odd) {
+    margin-bottom: 0px;
+    min-height: 0px;
+    left: 0px;
+  }
+  .timeline > li .timeline-image {
+    display: none;
+  }
+  .timeline > li:nth-child(even) .timeline-image {
+    left: 0;
+    margin-left: 0;
+  }
+  .timeline > li:nth-child(odd) .timeline-image {
+    left: 0px;
+    margin-left: 0;
+  }
+  .timeline > li:nth-child(even) .timeline-panel {
+    width: 100%;
+    padding: 0 0 20px 0px;
+  }
+  .timeline > li:nth-child(odd) .timeline-panel {
+    width: 100%;
+    padding: 0 0px 20px 0px;
+    left: 0;
+    text-align: left;
+  }
+  .timeline > li .line {
+    display: none;
+  }
+}
