vierson  01.0.0 modificacion de datos

--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -404,7 +404,7 @@
         <app-competences></app-competences>
       </div>
       <div class="col-lg-6">
-        <!-- <app-hability></app-hability> -->
+        <app-hability></app-hability>
       </div>
      </div>
       
