--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -70,9 +70,10 @@
               {{ paragran }}
             </p>
             <!-- <br> -->
-            <button class="btn btn-outline-primary" style="width: 170px; height: 52px; color: white; padding: 7px; margin: 17px 0;">
-              <i class="bi bi-download"></i> &nbsp;Descargar CV 
-            </button>
+            <a href="/assets/miCv/mICv.pdf" target="_blank"><button class="btn btn-outline-primary" style="width: 170px; height: 52px; color: white; padding: 7px; margin: 17px 0;">
+              <i class="bi bi-download"> </i> &nbsp;Descargar CV 
+            </button></a>
+            
           </div>
         </div>
         <div class="col-lg-6 auto">
