--- a/src/app/public/components/competences/competences.component.scss
+++ b/src/app/public/components/competences/competences.component.scss
@@ -14,10 +14,125 @@ h3{
 
 .container-competences-all .text{
     color: white;
+    // background: red;
+    width: 70%;
+    margin-left: 30%;
+    p{
+        text-align: justify;
+    }
 }
 
+@media (min-width: 1210px) and  (max-width: 1600px) {
+   
+    .container-competences-all .text{
+        color: white;
+        // background: red;
+        width: 80%;
+        margin-left: 20%;
+        p{
+            text-align: justify;
+        }
+    }
+    .progress-data{
+        // background: red;
+        // left: 100%;
+        margin-left: 20% !important;
+        // width:80%;
+        // margin: 12px 120
+    }
+    
+    
+}
+
+@media (min-width: 991px) and  (max-width: 1210px) {
+    
+    .container-competences-all .text{
+        color: white;
+        // background: red;
+        width: 90%;
+        margin-left: 10%;
+        p{
+            text-align: justify;
+        }
+    }
+    .progress-data{
+        // background: red;
+        // left: 100%;
+        margin-left: 10% !important;
+        width:100%;
+        // margin: 12px 120
+    }
+}
+@media (min-width: 630px) and  (max-width: 991px) {
+    .container-competences-all .text{
+        color: white;
+        // background: red;
+        width: 80%;
+        margin-left: 5%;
+        p{
+            text-align: justify;
+        }
+    }
+    .progress-data{
+        // background: red;
+        // left: 100%;
+        margin-left: 5% !important;
+        width:100%;
+        // margin: 12px 120
+    }
+}
+
+@media (min-width: 520px) and  (max-width: 630px) {
+    .container-competences-all .text{
+        color: white;
+        // background: red;
+        width: 80%;
+        margin-left: 5%;
+        p{
+            text-align: justify;
+        }
+    }
+    .progress-data{
+        // background: red;
+        // left: 100%;
+        margin-left: 5% !important;
+        width:100%;
+        // margin: 12px 120
+    }
+}
+
+@media (min-width: 320px) and  (max-width: 520px) {
+    .container-competences-all .text{
+        color: white;
+        // background: red;
+        width: 90%;
+        margin-left: 0%;
+        p{
+            text-align: justify;
+        }
+        h3{
+            font-size: 40px;
+        }
+    }
+
+    .container-progress{
+        // background: blue;
+        position: relative;
+    }
+
+    .progress-data{
+        // background: red;
+        // left: 100%;
+        margin-left: 13% !important;
+        width:100%;
+        // margin: 12px 120
+    }
+}
+
+
 .container-progress .progress{
-    margin: 12px;
+    margin: 12px 0;
+    
 }
 h6{
     color: white;
@@ -33,4 +148,12 @@ h6{
     background-size: 0% 5px;
     background-position: left bottom;
     transition: background-size 700ms  ease-in-out;
+}
+
+.progress-data{
+    // background: red;
+    // left: 100%;
+    margin-left: 30%;
+    width:70%;
+    // margin: 12px 120
 }
