--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -380,7 +380,7 @@
       <a href="#Proyectos" class="nav-link" #item4>Proyectos</a>
     </li>
     <li class="item">
-      <a href="#Contacto" class="nav-link" #item5>Contacto</a>
+      <a href="#Experiences" class="nav-link" #item5>Experiencia</a>
     </li>
   </ul>
 </header>
@@ -426,11 +426,11 @@
     </div>
   </section>
 
-  <!-- <section id="Contactos">
-    <div class="container-contact">
-     <app-contact></app-contact>
+  <section id="Experiences">
+    <div class="container-experiences">
+      <app-experiences></app-experiences>
     </div>
-  </section> -->
+  </section>
 
   <footer>
     <app-footer></app-footer>
