--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -424,47 +424,10 @@ margin: 20% 5%;
     height: 210vh;
   }
 }
-// @media (max-width: 855px) {
-//   .container-hability{
-//     height: 122vh;
-//   }
-// }
 
-// @media (max-width: 770px) {
-//   .container-hability{
-//     height: 162vh;
-//   }
-// }
-
-// @media (max-width: 541px) {
-//   .container-hability{
-//     height: 215vh;
-//   }
-// }
-
-// @media (max-width: 480px) {
-//   .container-hability{
-//     height: 180vh;
-//   }
-// }
-
-// @media (max-width: 390px) {
-//   .container-hability{
-//     height: 200vh;
-//   }
-// }
-
-// @media (max-width: 360px) {
-//   .container-hability{
-//     height: 205vh;
-//   }
-// }
-
-  // @media (max-width: 376px) {
-  //   .container-hability{
-  //     height: 245vh;
-  //   }
-  // }
+.container-experiences{
+ margin-bottom: 54px;
+}
 
 .container-references{
 
