--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -3,12 +3,12 @@ data-aos-offset="300"
 data-aos-easing="ease-in-sine" -->
 <div class="container-proyect-all">
   <h3 class="title-section">PROYECTOS DESTACADOS</h3>
-  <!-- <p class="text-paragram">
+  <p class="text-paragram">
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro perferendis
     voluptatum beatae libero laboriosam, totam dolorem eaque nihil! Minima,
     minus laborum quisquam officia aperiam doloremque earum. Nemo sequi quisquam
     voluptas?
-  </p> -->
+  </p>
   <div class="row">
     <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
