--- a/src/app/public/components/proyect/proyect.component.scss
+++ b/src/app/public/components/proyect/proyect.component.scss
@@ -23,7 +23,7 @@ h3{
     font-size: 19px;
     text-align: center;
     color: white;
-    margin: 40px 290px;
+    margin: 40px 12%;
 }
 
 .container-proyect-all:hover{
