--- a/src/app/public/pages/home/home.component.scss
+++ b/src/app/public/pages/home/home.component.scss
@@ -426,12 +426,12 @@ margin: 20% 5%;
 }
 
 .container-experiences{
- margin-bottom: 54px;
+  margin: 23px 12%;
 }
 
 .container-references{
-
-  margin-bottom: 95px;
+  margin: 3px 10%;
+  margin-bottom: 100px;
 }
 
 
