--- a/src/app/public/components/experiences/experiences.component.html
+++ b/src/app/public/components/experiences/experiences.component.html
@@ -2,12 +2,12 @@
   <div class="col-xl-12">
     <div>
       <div class="card-body">
-        <div class="row justify-content-center mt-4 pt-3">
+        <div class="row">
           <div class="text-center container-experiences">
             <h3 class="title-section" style="font-size: 42px">
               MIS EXPERIENCIA
             </h3>
-            <p class="text-center" style="margin: 22px  15% ;">
+            <p style="margin: 22px  5% ;">
               Llevo varios años dedicándome a la programación, y a lo largo de
               este tiempo, he aprendido mucho y he crecido como profesional.
               Durante mis estudios en la universidad, tuve la oportunidad de
@@ -19,11 +19,11 @@
               mejorando mis habilidades cada día.
             </p>
           </div>
-          <div class="col-xl-10">
-            <ul class="timeline mb-0">
+          <div class="col-xl-12">
+            <ul class="timeline ">
               <li>
                 <div class="text-center">
-                  <h5 class="text-uppercase mb-0 fs-16">
+                  <h5 class="text-uppercase  fs-16">
                     15/03/2022 – 15/08/2022
                   </h5>
                 </div>
@@ -53,7 +53,7 @@
 
               <li>
                 <div class="text-center">
-                  <h5 class="text-uppercase mb-0 fs-16">
+                  <h5 class="text-uppercase  fs-16">
                     25/04/2022 – 25/07/2022
                   </h5>
                 </div>
