--- a/src/app/public/components/experiences/experiences.component.scss
+++ b/src/app/public/components/experiences/experiences.component.scss
@@ -114,14 +114,25 @@
     bottom: .25rem
 }
 @media(max-width: 639px){
+    
+    .row {
+        padding-left: 0;
+    }
+    .timeline{
+        display: inline;
+    }
+
     .timeline::before {
         display: none;
     }
 }
 
-@media (min-width: 40rem) {
+@media (min-width: 60rem) {
     .timeline {
-        grid-template-columns:1fr .25rem 1fr
+        margin: 0;
+        padding: 0;
+        // background: red;
+        grid-template-columns:12fr 0.1rem 12fr
     }
 
     .timeline::before {
