--- a/src/app/public/components/references/references.component.html
+++ b/src/app/public/components/references/references.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-references-all">
   <div class="row">
     <div class="col-lg-12">
       <h3 class="title-section">MIS REFERENCIAS</h3>
