--- a/src/app/public/components/about/about.component.html
+++ b/src/app/public/components/about/about.component.html
@@ -25,7 +25,9 @@
             transformar ideas en realidades tangibles, y esto me llevó a
             sumergirme en el mundo del código.
           </p>
-          <button type="button" class="btn btn-primary">Ver mas</button>
+          
+          
+          <a href="/#/aboutMe"><button type="button" class="btn btn-primary">Leer más </button></a>
      
       </div>
     </div>
