--- a/src/app/public/components/about/about.component.scss
+++ b/src/app/public/components/about/about.component.scss
@@ -37,7 +37,7 @@ a:hover{
     // position: relative;
     // margin: 10px 0px;
     // z-index: 1;
-    border: 1px solid;
+    border: 2px solid #246fa5;
     text-align: center;
     padding: 15px 45px;
     margin: 12px 0;
