--- a/src/app/public/components/proyect/proyect.component.html
+++ b/src/app/public/components/proyect/proyect.component.html
@@ -4,10 +4,16 @@ data-aos-easing="ease-in-sine" -->
 <div class="container-proyect-all">
   <h3 class="title-section">PROYECTOS DESTACADOS</h3>
   <p class="text-paragram">
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro perferendis
-    voluptatum beatae libero laboriosam, totam dolorem eaque nihil! Minima,
-    minus laborum quisquam officia aperiam doloremque earum. Nemo sequi quisquam
-    voluptas?
+    En la realización de mis proyectos, he adquirido una amplia experiencia en
+    el desarrollo de soluciones creativas y eficientes. He trabajado en una
+    variedad de proyectos que me han permitido aplicar y mejorar mis habilidades
+    técnicas, desde la creación de aplicaciones web hasta el diseño de
+    interfaces de usuario. Cada proyecto representa un nuevo desafío y una
+    oportunidad para aprender, y siempre me comprometo a entregar resultados de
+    alta calidad. Mi enfoque está en comprender las necesidades del cliente y
+    asegurarme de que cada detalle sea cuidadosamente atendido. Estoy
+    comprometido a ofrecer lo mejor en cada proyecto, garantizando la
+    satisfacción y el éxito de todos los involucrados.
   </p>
   <div class="row">
     <div class="col-xl-4 col-md-6 col-sm-6">
@@ -51,10 +57,7 @@ data-aos-easing="ease-in-sine" -->
     <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
-          <img
-            src="assets/img/proyecto/proyecto2.png"
-            alt=""
-          />
+          <img src="assets/img/proyecto/proyecto2.png" alt="" />
 
           <div class="container-text-proyec">
             <h2>Simuladores laborales en 3D</h2>
@@ -94,10 +97,7 @@ data-aos-easing="ease-in-sine" -->
     <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
-          <img
-            src="assets/img/proyecto/proyecto1.png"
-            alt=""
-          />
+          <img src="assets/img/proyecto/proyecto1.png" alt="" />
 
           <div class="container-text-proyec">
             <h2>proyecto-1</h2>
@@ -131,10 +131,7 @@ data-aos-easing="ease-in-sine" -->
     <div class="col-xl-4 col-md-6 col-sm-6">
       <div class="container-img">
         <div class="img-proyect">
-          <img
-            src="assets/img/proyecto/proyecto1.png"
-            alt=""
-          />
+          <img src="assets/img/proyecto/proyecto1.png" alt="" />
 
           <div class="container-text-proyec">
             <h2>proyecto-1</h2>
