--- a/src/app/public/pages/home/home.component.html
+++ b/src/app/public/pages/home/home.component.html
@@ -399,6 +399,11 @@
   </section>
 
   <section id="hability">
+    <div class="custom-shape-divider-bottom-1719285687">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
+      </svg>
+  </div>
     <div class="container-hability">
      <div class="row">
       <div class="col-lg-6">
@@ -410,6 +415,11 @@
      </div>
       
     </div>
+    <div class="custom-shape-divider-bottom-17">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M1200 120L0 16.48 0 0 1200 0 1200 120z" class="shape-fill"></path>
+      </svg>
+  </div>
   </section>
   <br>
   <br>
@@ -421,9 +431,20 @@
   </section>
 
   <section id="Proyectos" >
-    <div class="container-proyect">
-      <app-proyect></app-proyect>
-    </div>
+    <div class="custom-shape-divider-bottom-1719286829">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
+      </svg>
+  </div>
+  <div class="container-proyect">
+    <app-proyect></app-proyect>
+    <div class="custom-shape-divider-bottom-1719287557">
+      <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+          <path d="M598.97 114.72L0 0 0 120 1200 120 1200 0 598.97 114.72z" class="shape-fill"></path>
+      </svg>
+  </div>
+  </div>
+  
   </section>
 
   <section id="Experiences">
