--- a/src/app/public/components/references/references.component.html
+++ b/src/app/public/components/references/references.component.html
@@ -3,24 +3,36 @@
     <div class="col-lg-12">
       <h3 class="title-section">MIS REFERENCIAS</h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        En esta sección encontrarás una selección de referencias que destacan mi
+        trayectoria profesional. Cada una de ellas ha sido cuidadosamente
+        escogida para reflejar la diversidad y calidad de mis proyectos. Las
+        referencias incluyen testimonios de colegas, supervisores y clientes con
+        los que he tenido el placer de trabajar. Estas referencias no solo
+        validan mi habilidad técnica y creatividad, sino también mi compromiso
+        con la excelencia y la colaboración en equipo.
       </p>
       <ul class="timeline">
         <li>
-          <div class="timeline-image"
-          data-aos="zoom-in"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-image"
+            data-aos="zoom-in"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
-            <img class="img-circle img-responsive" src="assets/img/jonathan01.png" alt="">
+            <img
+              class="img-circle img-responsive"
+              src="assets/img/jonathan01.png"
+              alt=""
+            />
             <!-- <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/1" alt=""> -->
           </div>
-          <div class="timeline-panel" 
-          data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-panel"
+            data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
             <div class="timeline-heading">
               <h4>Step One</h4>
@@ -28,32 +40,42 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
-          <div class="line"
-          data-aos="zoom-in"
-          data-aos-offset="500"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="line"
+            data-aos="zoom-in"
+            data-aos-offset="500"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           ></div>
         </li>
         <li class="timeline-inverted">
-          <div class="timeline-image"
-          data-aos="zoom-in"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-image"
+            data-aos="zoom-in"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
-            <img class="img-circle img-responsive" src="assets/img/jonathan01.png" alt="">
+            <img
+              class="img-circle img-responsive"
+              src="assets/img/jonathan01.png"
+              alt=""
+            />
             <!-- <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/2" alt=""> -->
           </div>
-          <div class="timeline-panel"
-          data-aos="fade-left"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-panel"
+            data-aos="fade-left"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
             <div class="timeline-heading">
               <h4>Step Two</h4>
@@ -61,32 +83,41 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
-          <div class="line"
-          data-aos="zoom-in"
-          data-aos-offset="500"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="line"
+            data-aos="zoom-in"
+            data-aos-offset="500"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           ></div>
         </li>
         <li>
-          <div class="timeline-image"
-          data-aos="zoom-in"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-image"
+            data-aos="zoom-in"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
-            <img class="img-circle img-responsive" src="assets/img/jonathan01.png" alt="">
-            
+            <img
+              class="img-circle img-responsive"
+              src="assets/img/jonathan01.png"
+              alt=""
+            />
           </div>
-          <div class="timeline-panel"
-          data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine" 
+          <div
+            class="timeline-panel"
+            data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
             <div class="timeline-heading">
               <h4>Step Three</h4>
@@ -94,32 +125,42 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
-          <div class="line"
-          data-aos="zoom-in"
-          data-aos-offset="500"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="line"
+            data-aos="zoom-in"
+            data-aos-offset="500"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           ></div>
         </li>
         <li class="timeline-inverted">
-          <div class="timeline-image"
-          data-aos="zoom-in"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-image"
+            data-aos="zoom-in"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
-            <img class="img-circle img-responsive" src="assets/img/jonathan01.png" alt="">
+            <img
+              class="img-circle img-responsive"
+              src="assets/img/jonathan01.png"
+              alt=""
+            />
             <!-- <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/4" alt=""> -->
           </div>
-          <div class="timeline-panel"
-          data-aos="fade-left"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-panel"
+            data-aos="fade-left"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
             <div class="timeline-heading">
               <h4>Step Three</h4>
@@ -127,32 +168,42 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
-          <div class="line"
-          data-aos="zoom-in"
-          data-aos-offset="500"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="line"
+            data-aos="zoom-in"
+            data-aos-offset="500"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           ></div>
         </li>
         <li>
-          <div class="timeline-image"
-          data-aos="zoom-in"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-image"
+            data-aos="zoom-in"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
-            <img class="img-circle img-responsive" src="assets/img/jonathan01.png" alt="">
+            <img
+              class="img-circle img-responsive"
+              src="assets/img/jonathan01.png"
+              alt=""
+            />
             <!-- <img class="img-circle img-responsive" src="http://lorempixel.com/250/250/cats/5" alt=""> -->
           </div>
-          <div class="timeline-panel"
-          data-aos="fade-right"
-          data-aos-offset="300"
-          data-aos-duration="1500"
-          data-aos-easing="ease-in-sine"
+          <div
+            class="timeline-panel"
+            data-aos="fade-right"
+            data-aos-offset="300"
+            data-aos-duration="1500"
+            data-aos-easing="ease-in-sine"
           >
             <div class="timeline-heading">
               <h4>Bonus Step</h4>
@@ -160,7 +211,10 @@
             </div>
             <div class="timeline-body">
               <p class="text-muted">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                nisi ut aliquip ex ea commodo consequat.
               </p>
             </div>
           </div>
