--- a/src/app/public/pages/about-me/about-me.component.html
+++ b/src/app/public/pages/about-me/about-me.component.html
@@ -3,10 +3,13 @@
     <button><i class="bi bi-arrow-left-short"></i> Anterior</button>
   </a>
   <div class="row">
-    <div class="col-lg-6 col-md-12">
-        <img class="imgAbout" src="assets/img/jonathan04.jpeg" alt="" />
+    <div class="col-xl-6 col-lg-12 col-md-12">
+        <div class="containerimgAbout">
+            <!-- <img class="imgAbout" src="assets/img/jonathan04.jpeg" alt="" /> -->
+            <!-- <h2>hola mundo</h2> -->
+        </div>
     </div>
-    <div class="col-lg-6 col-md-12 " >
+    <div class="col-xl-6  col-lg-12 col-md-12 " >
       <div class="container-text-about">
         <h3> Quién Soy, conoseme</h3>
         <P>
